Updates to the authentication system and API routes
New commands have been introduced for login (`SignIn`) and registration (`SignUp`), removing the previous command (`Login`). The API routes have been updated to `/signin`, and `/signup` has been added. Handlers and validators have been created for the new commands, and API responses have been updated with a new type (`SignInResponse`). Changes have also been made to the test files, and the Swagger routes have been corrected. The project version has been increased to 1.1.0.
