# Backend/Ticketing.Auth/src/Ticketing.Auth.Application/Dtos/Requests/SingInRequest.cs
@@ -1,7 +1,7 @@
 ﻿using Ticketing.Core.Domain.SeedWork.Interfaces;
 
 namespace Ticketing.Auth.Application.Dtos.Requests;
-public class LoginRequest
+public class SingInRequest
 {
   public string Username { get; set; } = default!;
   public string Password { get; set; } = default!;
